# MLCS

./: .gitignore  Cargo.toml  README.md  default_10889510549300652418_0_261208.profraw  default_17087862610454250301_0_259392.profraw  default_6799356069956318762_0_259514.profraw  default_6799356069956318762_0_259815.profraw  dockerfile  file2  main.rs  testsuite.sh
benches/: my_benchmark.rs
doc/: match&successeurs.HEIC
src/: .main.rs.swo  astar.rs  astar_app.rs  bench.rs  brute_force.rs  main.rs  testsuite.rs  utils.rs
testfiles/: big1  big2  big3  big4  file1  more1  more2  toobig1  toobig2
testfiles/cpp-implementation/: Makefile  Node.h  SuffixTree.cpp  SuffixTree.h  main.cpp
