[package]
name = "mlcs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
path = "src/bench.rs"

[dependencies]
paste = "1.0.15"
# this depency could be avoided because we are not concerned 
# with security here, so we could write our light-weight own model
rand = "0.8"
